[package]
name = "iss_tracker"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.5.37", features = ["derive"] }
